# WardHound

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  RELEASE_NOTES.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  celery_app.py  digest_delivery.py  digest_pdf.py  main.py
app/api/: __init__.py  auth.py  digests.py  health.py  incidents.py  models.py  realtime.py  services.py  websocket.py
app/collectors/: active_directory.py  base.py  jumpserver.py  jumpserver_live.py  jumpserver_ops.py  packetfence.py
app/config/: __init__.py  secrets.py
app/db/: __init__.py  models.py
app/engines/: __init__.py  analysis.py  correlation.py  digest.py  pipeline.py  policy.py  response.py  risk.py
app/integrations/: __init__.py  active_directory.py  duo.py  firepower.py  jumpserver.py  packetfence.py  ticketing.py  webhook.py
app/observability/: __init__.py  logging.py  metrics.py  tracing.py
app/schemas/: analysis.py  digest.py  events.py  incidents.py  response.py
app/stores/: __init__.py  digest.py  incidents.py  postgres.py
app/tasks/: active_directory.py  digest.py  jumpserver.py  packetfence.py
docs/: CASE_STUDY.md  ROADMAP.md  SPEC.md  THREAT_MODEL.md
docs/adr/: 0001-record-architecture-decisions.md  0002-event-schema-and-collector-interface.md  0003-collector-parsing-assumptions.md  0004-correlation-policy-risk-design.md  0005-ai-analysis-engine-design.md  0006-response-engine-design.md  0007-incident-api-design.md  0008-observability-and-hardening.md  0009-persistent-data-layer.md  0010-auth0-identity-federation.md  0011-real-packetfence-integration.md  0012-real-active-directory-disable.md  0013-real-fmc-block-ip.md  0014-real-jumpserver-close-session.md  0015-real-duo-require-mfa.md  0016-real-webhook-notification.md  0017-real-ticketing-webhook.md  0018-manual-approval-audit-accuracy.md  0019-secrets-provider-interface.md  0020-daily-security-digest.md  0021-real-collector-evidence-ingestion.md  0022-jumpserver-continuous-polling.md  0023-digest-scheduling-and-delivery.md  0024-packetfence-continuous-polling.md  0025-ad-continuous-polling.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  (+1 more)
migrations/: env.py
observability/: prometheus.yml
prompts/: week1-claude-code.md  week1-codex.md
scripts/: export-ad-security-events.ps1  ingest_ad_events.py  ingest_jumpserver_live.py  ingest_packetfence_live.py
tests/: conftest.py  test_active_directory_collector.py  test_active_directory_integration.py  test_active_directory_polling_task.py  test_analysis_engine.py  test_collectors.py  test_correlation_engine.py  test_digest_api.py  test_digest_builder.py  test_digest_delivery.py  test_digest_pdf.py  test_digest_task.py  test_duo_integration.py  test_engine_pipeline.py  test_firepower_integration.py  test_health.py  test_incident_api.py  test_jumpserver_collector.py  test_jumpserver_integration.py  test_jumpserver_ops.py  test_jumpserver_polling_task.py  test_packetfence_collector.py  test_packetfence_integration.py  test_packetfence_polling_task.py  test_policy_engine.py  test_postgres_stores.py  test_response_engine.py  test_risk_engine.py  test_schemas.py  test_secrets.py  test_ticketing_integration.py  test_webhook_integration.py
(+36 files in other folders)
