[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wardhound"
version = "0.1.0"
description = "AI-powered enterprise security event correlation and response orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2",
    "anthropic>=0.116,<1",
    "auth0-fastapi-api>=1.0.0b7,<2",
    "asyncpg>=0.30,<1",
    "celery[redis]>=5.4,<6",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "instructor>=1.15,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.36,<2",
    "opentelemetry-instrumentation-fastapi>=0.57b0,<1",
    "opentelemetry-sdk>=1.36,<2",
    "prometheus-client>=0.22,<1",
    "pydantic>=2.10,<3",
    "redis>=5.2,<6",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=7.0,<8",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "fastapi_plugin.*"
ignore_missing_imports = true
